Fixed alignment of nav menu.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -143,6 +143,10 @@
     display: block;
 }
 
+#navLinks {
+  float: right;
+}
+
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 768px) {
   .topnav a:not(:first-child) {display: none;}
@@ -172,5 +176,8 @@
     display: block;
     width: 100%;
     text-align: left;
+  }
+  #navLinks {
+    float: none;
   }
 }
